# study-assistant-ai

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  app.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
data/: notes.txt
scripts/: capture_demo.py
tests/: test_rag_helper.py
utils/: rag_helper.py
