[project]
name = "study-assistant-ai"
version = "0.1.0"
description = "A 100% local RAG study assistant powered by Ollama, LangChain, FAISS and Streamlit."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
# pycodestyle (E), pyflakes (F), isort (I), bugbear (B), pyupgrade (UP)
select = ["E", "F", "I", "B", "UP"]
ignore = [
    "E501",  # line length is handled by the formatter
]

[tool.ruff.lint.per-file-ignores]
# Tests intentionally access "private" helpers for unit testing.
"tests/*" = ["B018"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
